--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^20.1.6",
     "@angular/router": "^20.1.6",
     "@netlify/angular-runtime": "^2.1.0",
+    "@swimlane/ngx-charts": "^23.1.0",
+    "node-cache": "^5.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.1"
