--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^20.1.6",
     "@netlify/angular-runtime": "^2.1.0",
     "@swimlane/ngx-charts": "^23.1.0",
+    "ngx-skeleton-loader": "^11.3.0",
     "node-cache": "^5.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
